# waller-project

./: .gitignore  Agent Prompt Modification.ipynb  Autonomous Tool Development.ipynb  Intro.ipynb  README.md  pyproject.toml
agent-prompt-modification/: Agent Prompt Modification.ipynb  task_agent_prefix.txt
autonomous-tool-development/: Autonomous Tool Development.ipynb
