[tool.poetry]
name = "waller-project"
version = "0.1.0"
description = ""
authors = ["bkitano <briankitano@gmail.com>"]
readme = "README.md"
packages = [{include = "waller_project"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.239"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
google-search-results = "^2.4.2"
sklearn = "^0.0.post7"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
